--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ If you have any questions or concerns about this Privacy Policy, you may contact
 </p>
 
 <p>
-<strong>Email:</strong> your-email@example.com
+<strong>Email:</strong> nexusplayengine@protonmail.com
 </p>
 
 </body>
